--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
             padding-top: 80px;
         }
 
-        /* --- Header e Navegação (Cor Alterada para Fundo Escuro) --- */
+        /* --- Header e Navegação (Fundo Escuro para Logo Clara) --- */
         #main-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 10px 5%;
-            background-color: var(--primary-color); /* Fundo azul escuro para destacar logo branca */
+            background-color: var(--primary-color);
+            /* Fundo azul escuro para destacar logo branca */
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
             position: fixed;
             top: 0;
@@ -61,7 +62,6 @@
         #logo-link img {
             height: 60px;
             width: auto;
-            /* Se a logo for branca, ela já se destacará */
         }
 
         #menu {
@@ -74,7 +74,8 @@
 
         #menu a {
             text-decoration: none;
-            color: white; /* Cor branca para o texto do menu no header escuro */
+            color: white;
+            /* Cor branca para o texto do menu no header escuro */
             font-weight: 600;
             padding: 5px 0;
             position: relative;
@@ -96,7 +97,8 @@
 
         #menu a:hover,
         #menu a.entrar {
-            color: var(--highlight-color); /* Amarelo no hover */
+            color: var(--highlight-color);
+            /* Amarelo no hover */
         }
 
         #menu a:hover::after,
@@ -107,7 +109,8 @@
 
         #menu a.entrar {
             color: var(--primary-color);
-            background-color: white; /* Botão entrar branco no fundo azul */
+            background-color: white;
+            /* Botão entrar branco no fundo azul */
             padding: 8px 15px;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -158,24 +161,6 @@
             object-fit: cover;
             border-radius: 10px;
             box-shadow: var(--card-shadow);
-        }
-
-        /* Estilo para o ícone no slide (se for um <img>) */
-        .carousel-icon-slide {
-            height: 500px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: var(--background-light); /* Fundo claro para o slide do ícone */
-            border-radius: 10px;
-            box-shadow: var(--card-shadow);
-        }
-
-        .carousel-icon-slide img {
-            width: 150px; /* Tamanho maior para destaque do ícone */
-            height: 150px;
-            box-shadow: none; /* Remove sombra do ícone */
-            border-radius: 0;
         }
 
         .carousel-caption h3 {
@@ -293,6 +278,7 @@
 
         /* --- Responsividade --- */
         @media (max-width: 768px) {
+
             /* Menu Mobile */
             #btn-mobile {
                 display: block;
@@ -326,17 +312,19 @@
 
             /* Hamburger Icon */
             #hamburger {
-                background: white; /* Hamburger branco no fundo azul */
+                background: white;
+                /* Hamburger branco no fundo azul */
             }
+
             #hamburger::before,
             #hamburger::after {
                 background: white;
             }
 
         }
-        /* Mantendo estilos de hamburger e animações */
+
+        /* Hamburger Styles (Mantidos para funcionalidade) */
         #btn-mobile {
-            display: none;
             border: none;
             background: none;
             cursor: pointer;
@@ -344,6 +332,9 @@
             position: relative;
             width: 30px;
             height: 30px;
+        }
+        #btn-mobile {
+            display: none; /* Escondido por padrão, só aparece em mobile */
         }
     </style>
 </head>
@@ -376,7 +367,7 @@
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                     <li data-target="#myCarousel" data-slide-to="1"></li>
                     <li data-target="#myCarousel" data-slide-to="2"></li>
-                    <li data-target="#myCarousel" data-slide-to="3"></li> </ol>
+                </ol>
 
                 <div class="carousel-inner">
                     <div class="item active">
@@ -398,15 +389,6 @@
                         <div class="carousel-caption">
                             <h3>IEMA Pleno</h3>
                             <p>Gonçalves Dias</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="carousel-icon-slide">
-                            <img src="relogio.png" alt="Ícone de Relógio" class="animate__animated animate__swing animate__infinite">
-                        </div>
-                        <div class="carousel-caption" style="color: black; text-shadow: 1px 1px white;">
-                            <h3>Sites de Consulta de Horário</h3>
-                            <p>Verifique nossos Horários na seção abaixo!</p>
                         </div>
                     </div>
                 </div>
@@ -482,11 +464,6 @@
 
     <script>
         const btnMobile = document.getElementById('btn-mobile');
-        
-        // Define o estilo do hamburger para branco assim que o script carregar
-        document.getElementById('hamburger').style.backgroundColor = 'white';
-        document.getElementById('hamburger').style.setProperty('--text-color', 'white');
-
 
         function toggleMenu(event) {
             if (event.type === 'touchstart') event.preventDefault();
