--- a/index.html
+++ b/index.html
@@ -8,29 +8,24 @@
     <link rel="icon" href="icon.png">
     <title>Biblioteca GDias</title>
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Poppins:wght@300;400;600&display=swap"
-        rel="stylesheet">
+    <!-- Fontes Google -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <!-- Animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
     <style>
-        /* CSS APRIMORADO COM HEADER ESCURO E FOCO NO CARROSSEL */
-
         /* --- Variáveis e Tipografia --- */
         :root {
-            --primary-color: #004d99;
-            /* Azul Escuro Institucional */
-            --secondary-color: #007bff;
-            /* Azul Claro de Destaque */
-            --highlight-color: #ffc107;
-            /* Amarelo de Destaque (Hover/Entrar) */
-            --background-light: #f4f6f8;
-            /* Fundo Claro Suave */
+            --primary-color: #0d6efd; /* Azul moderno */
+            --secondary-color: #6610f2; /* Roxo destaque */
+            --highlight-color: #ffc107; /* Amarelo hover */
+            --background-light: #f8f9fa;
             --text-color: #212529;
-            /* Preto Quase Padrão */
-            --card-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
-            /* Sombra mais suave */
+            --card-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
             --title-font: 'Montserrat', sans-serif;
             --body-font: 'Poppins', sans-serif;
         }
@@ -43,25 +38,24 @@
             padding-top: 80px;
         }
 
-        /* --- Header e Navegação (Fundo Escuro para Logo Clara) --- */
+        /* --- Header --- */
         #main-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 10px 5%;
             background-color: var(--primary-color);
-            /* Fundo azul escuro para destacar logo branca */
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
             position: fixed;
-            top: 0;
-            left: 0;
             width: 100%;
+            top: 0;
             z-index: 1000;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
         }
 
         #logo-link img {
             height: 60px;
             width: auto;
+            filter: brightness(0) invert(1); /* Logo branca */
         }
 
         #menu {
@@ -75,14 +69,12 @@
         #menu a {
             text-decoration: none;
             color: white;
-            /* Cor branca para o texto do menu no header escuro */
             font-weight: 600;
-            padding: 5px 0;
+            padding: 8px 0;
             position: relative;
             transition: color 0.3s;
         }
 
-        /* Efeito de sublinhado moderno */
         #menu a::after {
             content: '';
             position: absolute;
@@ -98,7 +90,6 @@
         #menu a:hover,
         #menu a.entrar {
             color: var(--highlight-color);
-            /* Amarelo no hover */
         }
 
         #menu a:hover::after,
@@ -110,29 +101,29 @@
         #menu a.entrar {
             color: var(--primary-color);
             background-color: white;
-            /* Botão entrar branco no fundo azul */
             padding: 8px 15px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s;
+            border-radius: 25px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+            transition: all 0.3s;
         }
 
         #menu a.entrar:hover {
             background-color: var(--highlight-color);
+            color: var(--primary-color);
         }
 
         #menu a.entrar::after {
             content: none;
         }
 
-
-        /* --- Títulos de Seção --- */
+        /* --- Títulos --- */
         .section-title {
             font-family: var(--title-font);
             margin: 60px 0 20px 0;
-            font-size: 3em;
+            font-size: 2.8em;
             font-weight: 700;
             color: var(--primary-color);
+            text-align: center;
             position: relative;
             padding-bottom: 10px;
         }
@@ -143,24 +134,33 @@
             width: 60px;
             height: 4px;
             background-color: var(--highlight-color);
-            margin: 5px auto 0;
+            margin: 10px auto 0;
             border-radius: 2px;
         }
 
-        .text-center {
-            text-align: center;
-        }
-
-        /* --- Carousel (Galeria) --- */
+        /* --- Carousel Moderno --- */
         #gallery-section {
-            padding: 20px 0;
+            padding: 40px 0;
+            background-color: var(--background-light);
         }
 
         .carousel-inner img {
             max-height: 500px;
+            width: 100%;
             object-fit: cover;
-            border-radius: 10px;
+            border-radius: 15px;
             box-shadow: var(--card-shadow);
+            transition: transform 0.5s;
+        }
+
+        .carousel-inner img:hover {
+            transform: scale(1.03);
+        }
+
+        .carousel-caption {
+            background: rgba(0, 0, 0, 0.4);
+            padding: 15px 20px;
+            border-radius: 10px;
         }
 
         .carousel-caption h3 {
@@ -168,11 +168,8 @@
             font-weight: 700;
         }
 
-
-        /* --- Seção de Serviços/Ícones --- */
+        /* --- Serviços --- */
         #services-section {
-            background-color: var(--background-light);
-            /* Fundo sutil para esta seção */
             padding: 60px 0 80px 0;
             text-align: center;
         }
@@ -187,8 +184,8 @@
         }
 
         .service-item {
-            width: 150px;
-            transition: transform 0.3s, opacity 0.3s;
+            width: 160px;
+            transition: transform 0.3s, box-shadow 0.3s;
         }
 
         .service-item a {
@@ -198,30 +195,30 @@
         }
 
         .service-icon {
-            width: 90px;
-            height: 90px;
-            padding: 15px;
+            width: 100px;
+            height: 100px;
+            padding: 20px;
             background-color: white;
             border-radius: 50%;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
             margin-bottom: 10px;
-            transition: background-color 0.3s, transform 0.3s;
+            transition: all 0.3s;
         }
 
-        /* Efeito de destaque no hover */
         .service-item:hover {
-            transform: translateY(-5px);
+            transform: translateY(-10px);
+            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
         }
 
         .service-item:hover .service-icon {
             background-color: var(--secondary-color);
-            transform: scale(1.05) rotate(2deg);
+            transform: scale(1.1) rotate(2deg);
         }
 
         .service-name {
             font-family: var(--title-font);
             margin: 0;
-            font-size: 1.1em;
+            font-size: 1.2em;
             font-weight: 600;
             color: var(--primary-color);
         }
@@ -230,56 +227,45 @@
         #main-footer {
             background-color: var(--primary-color);
             color: white;
-            padding: 40px 5%;
-        }
-
-        .footer-content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            padding: 50px 5%;
             text-align: center;
-            gap: 20px;
         }
 
         .footer-logo img {
-            filter: brightness(1.5);
-            margin-bottom: 10px;
-        }
-
-        .footer-copyright {
-            font-weight: 300;
-            line-height: 1.8;
-            border-top: 1px solid rgba(255, 255, 255, 0.2);
-            padding-top: 15px;
-            margin-top: 15px;
-            width: 100%;
+            filter: brightness(0) invert(1);
+            margin-bottom: 20px;
+            height: 60px;
         }
 
         .social-links {
             list-style: none;
-            padding: 0;
             display: flex;
+            justify-content: center;
             gap: 20px;
+            padding: 0;
         }
 
         .social-icon {
-            width: 35px;
-            height: 35px;
-            background-color: rgba(255, 255, 255, 0.15);
-            padding: 5px;
+            width: 40px;
+            height: 40px;
+            background-color: rgba(255, 255, 255, 0.2);
+            padding: 8px;
             border-radius: 50%;
-            transition: background-color 0.3s, transform 0.3s;
+            transition: all 0.3s;
         }
 
         .social-links a:hover .social-icon {
             background-color: var(--highlight-color);
-            transform: scale(1.1);
+            transform: scale(1.2);
         }
 
-        /* --- Responsividade --- */
-        @media (max-width: 768px) {
+        .footer-copyright {
+            margin-top: 20px;
+            font-weight: 300;
+        }
 
-            /* Menu Mobile */
+        /* --- Mobile --- */
+        @media (max-width: 768px) {
             #btn-mobile {
                 display: block;
             }
@@ -298,10 +284,10 @@
                 right: 5%;
                 background-color: white;
                 padding: 15px;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-                border-radius: 5px;
+                box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+                border-radius: 10px;
                 z-index: 999;
-                width: 150px;
+                width: 180px;
                 text-align: right;
             }
 
@@ -310,31 +296,33 @@
                 animation: slideDown 0.3s ease-out;
             }
 
-            /* Hamburger Icon */
-            #hamburger {
-                background: white;
-                /* Hamburger branco no fundo azul */
-            }
-
+            #hamburger,
             #hamburger::before,
             #hamburger::after {
+                display: block;
+                width: 30px;
+                height: 4px;
                 background: white;
+                border-radius: 2px;
+                position: absolute;
+                transition: all 0.3s;
             }
 
-        }
+            #hamburger {
+                top: 50%;
+                left: 0;
+                transform: translateY(-50%);
+            }
 
-        /* Hamburger Styles (Mantidos para funcionalidade) */
-        #btn-mobile {
-            border: none;
-            background: none;
-            cursor: pointer;
-            padding: 0;
-            position: relative;
-            width: 30px;
-            height: 30px;
-        }
-        #btn-mobile {
-            display: none; /* Escondido por padrão, só aparece em mobile */
+            #hamburger::before {
+                content: '';
+                top: -10px;
+            }
+
+            #hamburger::after {
+                content: '';
+                top: 10px;
+            }
         }
     </style>
 </head>
@@ -342,11 +330,10 @@
 <body>
     <header id="main-header">
         <a id="logo-link" href="login.html">
-            <img src="novalogo.png" alt="Biblioteca GDias Logo" width="200px">
+            <img src="novalogo.png" alt="Biblioteca GDias Logo">
         </a>
         <nav id="nav">
-            <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu"
-                aria-expanded="false">
+            <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
                 <span id="hamburger"></span>
             </button>
             <ul id="menu" role="menu">
@@ -359,9 +346,9 @@
     </header>
 
     <main>
+        <!-- Carousel -->
         <section id="gallery-section" class="container animate__animated animate__fadeInDown">
-            <h1 class="section-title text-center">Galeria</h1>
-            <br>
+            <h1 class="section-title">Galeria</h1>
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -371,21 +358,21 @@
 
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="01.jpg" alt="Biblioteca GDias - Imagem 1" style="width:100%;">
+                        <img src="01.jpeg" alt="Imagem 1">
                         <div class="carousel-caption">
                             <h3>IEMA Pleno</h3>
                             <p>Gonçalves Dias</p>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="02.jpg" alt="Biblioteca GDias - Imagem 2" style="width:100%;">
+                        <img src="02.jpeg" alt="Imagem 2">
                         <div class="carousel-caption">
                             <h3>IEMA Pleno</h3>
                             <p>Gonçalves Dias</p>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="03.jpg" alt="Biblioteca GDias - Imagem 3" style="width:100%;">
+                        <img src="03.jpeg" alt="Imagem 3">
                         <div class="carousel-caption">
                             <h3>IEMA Pleno</h3>
                             <p>Gonçalves Dias</p>
@@ -395,18 +382,16 @@
 
                 <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span>
-                    <span class="sr-only">Previous</span>
                 </a>
                 <a class="right carousel-control" href="#myCarousel" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right"></span>
-                    <span class="sr-only">Next</span>
                 </a>
             </div>
         </section>
 
-
+        <!-- Serviços -->
         <section id="services-section">
-            <h2 class="section-title text-center">Serviços</h2>
+            <h2 class="section-title">Serviços</h2>
             <div class="services-grid container">
                 <div class="service-item animate__animated animate__pulse animate__delay-1s">
                     <a href="suporte.html" title="Ficou com dúvida?">
@@ -442,26 +427,25 @@
         </section>
     </main>
 
+    <!-- Footer -->
     <footer id="main-footer">
-        <div class="container footer-content">
-            <div class="footer-logo">
-                <img src="novalogo.png" alt="Biblioteca GDias Logo" width="200px">
-            </div>
-            <ul class="social-links">
-                <li><a href="#"><img src="facebook.png" alt="Facebook" class="social-icon"></a></li>
-                <li><a href="https://www.instagram.com/iema_gdias/"><img src="instagram.png" alt="Instagram"
-                            class="social-icon"></a></li>
-                <li><a href="#"><img src="whatsapp.png" alt="WhatsApp" class="social-icon"></a></li>
-                <li><a href="#"><img src="gmail.png" alt="E-mail" class="social-icon"></a></li>
-            </ul>
-            <p class="footer-copyright">&copy UNIDADE PLENA SÃO LUIS GONÇALVES DIAS 2022<br>Todos os Direitos
-                Reservados.</p>
+        <div class="footer-logo">
+            <img src="novalogo.png" alt="Logo Biblioteca GDias">
         </div>
+        <ul class="social-links">
+            <li><a href="#"><img src="facebook.png" alt="Facebook" class="social-icon"></a></li>
+            <li><a href="https://www.instagram.com/iema_gdias/"><img src="instagram.png" alt="Instagram" class="social-icon"></a></li>
+            <li><a href="#"><img src="whatsapp.png" alt="WhatsApp" class="social-icon"></a></li>
+            <li><a href="#"><img src="gmail.png" alt="E-mail" class="social-icon"></a></li>
+        </ul>
+        <p class="footer-copyright">
+            &copy; UNIDADE PLENA SÃO LUIS GONÇALVES DIAS 2022<br>Todos os Direitos Reservados.
+        </p>
     </footer>
 
+    <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
     <script>
         const btnMobile = document.getElementById('btn-mobile');
 
@@ -471,11 +455,7 @@
             nav.classList.toggle('active');
             const active = nav.classList.contains('active');
             event.currentTarget.setAttribute('aria-expanded', active);
-            if (active) {
-                event.currentTarget.setAttribute('aria-label', 'Fechar Menu');
-            } else {
-                event.currentTarget.setAttribute('aria-label', 'Abrir Menu');
-            }
+            event.currentTarget.setAttribute('aria-label', active ? 'Fechar Menu' : 'Abrir Menu');
         }
 
         btnMobile.addEventListener('click', toggleMenu);
