--- a/index.html
+++ b/index.html
@@ -1,253 +1,222 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biblioteca GDias</title>
-    <link rel="icon" href="icon.png">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Biblioteca GDias</title>
+<link rel="icon" href="icon.png">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<style>
+    /* --- Variáveis --- */
+    :root{
+        --primary: #0d6efd;
+        --secondary: #6610f2;
+        --highlight: #ffc107;
+        --text-light: #ffffff;
+        --bg-light: #f5f5f5;
+        --shadow: 0 10px 30px rgba(0,0,0,0.15);
+        --font-title: 'Montserrat', sans-serif;
+        --font-body: 'Poppins', sans-serif;
+    }
 
-    <!-- Fontes Google -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    *{margin:0;padding:0;box-sizing:border-box;}
+    body{font-family: var(--font-body); background:#fff; color:#212529; scroll-behavior: smooth;}
+    a{text-decoration:none;color:inherit;}
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    /* --- Header --- */
+    header{
+        position: fixed;
+        top:0; left:0;
+        width:100%;
+        display:flex;
+        justify-content:space-between;
+        align-items:center;
+        padding:15px 5%;
+        background: rgba(13,110,253,0.8);
+        backdrop-filter: blur(10px);
+        z-index:1000;
+        box-shadow: var(--shadow);
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        transition: 0.3s;
+    }
 
-    <style>
-        /* --- Variáveis --- */
-        :root {
-            --primary-color: #0d6efd;
-            --secondary-color: #6610f2;
-            --highlight-color: #ffc107;
-            --bg-light: #f5f5f5;
-            --text-color: #212529;
-            --shadow: 0 10px 30px rgba(0,0,0,0.1);
-            --font-title: 'Montserrat', sans-serif;
-            --font-body: 'Poppins', sans-serif;
+    header img{height:55px; filter: brightness(0) invert(1);}
+
+    nav ul{
+        display:flex; gap:25px; list-style:none;
+    }
+
+    nav ul li a{
+        padding:8px 15px;
+        border-radius:30px;
+        font-weight:600;
+        transition:0.3s;
+    }
+
+    nav ul li a:hover{
+        background: var(--highlight);
+        color: var(--primary);
+    }
+
+    nav ul li a.entrar{
+        background: var(--text-light);
+        color: var(--primary);
+        font-weight:700;
+    }
+
+    nav ul li a.entrar:hover{
+        background: var(--highlight);
+        color: var(--primary);
+    }
+
+    /* --- Carrossel Moderno --- */
+    #carousel{
+        margin-top:100px;
+        width:100%;
+        position:relative;
+        overflow:hidden;
+    }
+
+    .carousel-slide{
+        display:flex;
+        transition: transform 0.7s ease-in-out;
+    }
+
+    .carousel-slide img{
+        width:100%;
+        height:500px;
+        object-fit:cover;
+        border-radius:15px;
+        box-shadow: var(--shadow);
+        transition: transform 0.5s;
+    }
+
+    .carousel-slide img:hover{
+        transform: scale(1.05);
+    }
+
+    /* --- Carousel controls --- */
+    .carousel-btn{
+        position:absolute;
+        top:50%;
+        transform:translateY(-50%);
+        background: rgba(0,0,0,0.4);
+        color:#fff;
+        border:none;
+        font-size:2em;
+        padding:10px 15px;
+        cursor:pointer;
+        border-radius:50%;
+        transition:0.3s;
+        z-index:10;
+    }
+
+    .carousel-btn:hover{background: var(--highlight); color:var(--primary);}
+    .prev{left:20px;}
+    .next{right:20px;}
+
+    /* --- Serviços --- */
+    #services{
+        background: var(--bg-light);
+        padding:80px 5%;
+        text-align:center;
+    }
+
+    .services-grid{
+        display:flex;
+        flex-wrap:wrap;
+        justify-content:center;
+        gap:40px;
+    }
+
+    .service-item{
+        background:#fff;
+        width:180px;
+        border-radius:15px;
+        box-shadow: var(--shadow);
+        transition: 0.3s;
+        padding:20px;
+        cursor:pointer;
+    }
+
+    .service-item img{
+        width:90px;
+        height:90px;
+        margin-bottom:15px;
+        transition: 0.3s;
+    }
+
+    .service-item h3{
+        font-family: var(--font-title);
+        font-size:1.1em;
+        color: var(--primary);
+    }
+
+    .service-item:hover{
+        transform: translateY(-10px) scale(1.02);
+        box-shadow:0 15px 40px rgba(0,0,0,0.25);
+    }
+
+    .service-item:hover img{
+        transform: scale(1.1);
+    }
+
+    /* --- Footer --- */
+    footer{
+        background: var(--primary);
+        color:#fff;
+        text-align:center;
+        padding:60px 5%;
+    }
+
+    footer img{
+        height:55px;
+        filter: brightness(0) invert(1);
+        margin-bottom:20px;
+    }
+
+    footer ul{
+        display:flex;
+        justify-content:center;
+        gap:20px;
+        list-style:none;
+        margin-bottom:20px;
+    }
+
+    footer ul li img{
+        width:40px; height:40px;
+        border-radius:50%;
+        padding:8px;
+        background: rgba(255,255,255,0.2);
+        transition:0.3s;
+    }
+
+    footer ul li img:hover{
+        transform:scale(1.2);
+        background: var(--highlight);
+    }
+
+    /* --- Responsivo --- */
+    @media(max-width:768px){
+        nav ul{flex-direction:column; background:rgba(255,255,255,0.9); position:absolute; top:70px; right:5%; padding:15px; border-radius:10px; display:none;}
+        nav.active ul{display:flex;}
+        #btn-mobile{display:block; background:none; border:none; cursor:pointer; width:30px; height:30px; position:relative;}
+        #btn-mobile span, #btn-mobile span::before, #btn-mobile span::after{
+            display:block; height:3px; width:100%; background:#fff; border-radius:3px; position:absolute;
         }
+        #btn-mobile span::before{content:''; top:-10px;}
+        #btn-mobile span::after{content:''; top:10px;}
+    }
 
-        body {
-            margin: 0;
-            font-family: var(--font-body);
-            background-color: white;
-            padding-top: 80px;
-        }
-
-        /* --- Header --- */
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background: var(--primary-color);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 5%;
-            z-index: 1000;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-        }
-
-        header img {
-            height: 60px;
-            filter: brightness(0) invert(1);
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 25px;
-            margin: 0;
-            padding: 0;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: 600;
-            padding: 8px 12px;
-            border-radius: 25px;
-            transition: 0.3s;
-        }
-
-        nav ul li a:hover, nav ul li a.entrar {
-            background: white;
-            color: var(--primary-color);
-        }
-
-        nav ul li a.entrar:hover {
-            background: var(--highlight-color);
-            color: var(--primary-color);
-        }
-
-        /* --- Carrossel --- */
-        #gallery {
-            margin: 40px auto;
-            max-width: 900px;
-        }
-
-        .carousel-inner img {
-            width: 100%;
-            max-height: 500px;
-            object-fit: cover;
-            border-radius: 15px;
-            box-shadow: var(--shadow);
-            transition: transform 0.5s;
-        }
-
-        .carousel-inner img:hover {
-            transform: scale(1.03);
-        }
-
-        .carousel-caption {
-            background: rgba(0,0,0,0.4);
-            padding: 15px 20px;
-            border-radius: 10px;
-        }
-
-        .carousel-caption h3, .carousel-caption p {
-            margin: 0;
-        }
-
-        /* --- Serviços --- */
-        #services {
-            background: var(--bg-light);
-            padding: 60px 0;
-            text-align: center;
-        }
-
-        .services-grid {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 40px;
-        }
-
-        .service-item {
-            width: 150px;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .service-item img {
-            width: 100px;
-            height: 100px;
-            padding: 15px;
-            border-radius: 50%;
-            background: white;
-            box-shadow: var(--shadow);
-            transition: all 0.3s;
-        }
-
-        .service-item:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 12px 30px rgba(0,0,0,0.2);
-        }
-
-        .service-item:hover img {
-            background: var(--secondary-color);
-            transform: scale(1.1);
-        }
-
-        .service-item h3 {
-            font-family: var(--font-title);
-            font-size: 1.1em;
-            margin-top: 10px;
-            color: var(--primary-color);
-        }
-
-        /* --- Footer --- */
-        footer {
-            background: var(--primary-color);
-            color: white;
-            padding: 50px 5%;
-            text-align: center;
-        }
-
-        footer img {
-            height: 60px;
-            filter: brightness(0) invert(1);
-            margin-bottom: 20px;
-        }
-
-        footer ul {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            list-style: none;
-            padding: 0;
-        }
-
-        footer ul li img {
-            width: 40px;
-            height: 40px;
-            padding: 8px;
-            border-radius: 50%;
-            background: rgba(255,255,255,0.2);
-            transition: 0.3s;
-        }
-
-        footer ul li img:hover {
-            background: var(--highlight-color);
-            transform: scale(1.2);
-        }
-
-        /* --- Responsivo --- */
-        @media (max-width: 768px){
-            nav ul {
-                flex-direction: column;
-                background: white;
-                position: absolute;
-                top: 70px;
-                right: 5%;
-                width: 150px;
-                padding: 15px;
-                display: none;
-                box-shadow: var(--shadow);
-                border-radius: 10px;
-            }
-
-            nav.active ul {
-                display: flex;
-            }
-
-            #btn-mobile {
-                display: block;
-                background: none;
-                border: none;
-                cursor: pointer;
-                width: 30px;
-                height: 30px;
-                position: relative;
-            }
-
-            #btn-mobile span, #btn-mobile span::before, #btn-mobile span::after {
-                display: block;
-                height: 3px;
-                width: 100%;
-                background: white;
-                border-radius: 3px;
-                position: absolute;
-            }
-
-            #btn-mobile span::before {
-                content: '';
-                top: -10px;
-            }
-
-            #btn-mobile span::after {
-                content: '';
-                top: 10px;
-            }
-        }
-    </style>
+</style>
 </head>
-
 <body>
 
 <header>
-    <a href="#"><img src="novalogo.png" alt="Logo Biblioteca GDias"></a>
+    <a href="#"><img src="novalogo.png" alt="Logo"></a>
     <nav id="nav">
-        <button id="btn-mobile" aria-label="Abrir menu"><span></span></button>
+        <button id="btn-mobile"><span></span></button>
         <ul>
             <li><a href="#" class="entrar">Entrar</a></li>
             <li><a href="#">Projetos</a></li>
@@ -259,46 +228,19 @@
 
 <main>
     <!-- Carrossel -->
-    <div id="gallery" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#gallery" data-slide-to="0" class="active"></li>
-            <li data-target="#gallery" data-slide-to="1"></li>
-            <li data-target="#gallery" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="item active">
-                <img src="01.jpeg" alt="Imagem 1">
-                <div class="carousel-caption">
-                    <h3>IEMA Pleno</h3>
-                    <p>Gonçalves Dias</p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="02.jpeg" alt="Imagem 2">
-                <div class="carousel-caption">
-                    <h3>IEMA Pleno</h3>
-                    <p>Gonçalves Dias</p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="03.jpeg" alt="Imagem 3">
-                <div class="carousel-caption">
-                    <h3>IEMA Pleno</h3>
-                    <p>Gonçalves Dias</p>
-                </div>
-            </div>
+    <div id="carousel">
+        <button class="carousel-btn prev">&#10094;</button>
+        <div class="carousel-slide">
+            <img src="01.jpeg" alt="Imagem 1">
+            <img src="02.jpeg" alt="Imagem 2">
+            <img src="03.jpeg" alt="Imagem 3">
         </div>
-        <a class="left carousel-control" href="#gallery" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="right carousel-control" href="#gallery" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
+        <button class="carousel-btn next">&#10095;</button>
     </div>
 
     <!-- Serviços -->
     <section id="services">
-        <h2 class="section-title">Serviços</h2>
+        <h2 style="font-family:var(--font-title); margin-bottom:50px;">Serviços</h2>
         <div class="services-grid">
             <div class="service-item">
                 <img src="suporte-tecnico.png" alt="Suporte">
@@ -325,22 +267,40 @@
 </main>
 
 <footer>
-    <img src="novalogo.png" alt="Logo Biblioteca GDias">
+    <img src="novalogo.png" alt="Logo">
     <ul>
         <li><img src="facebook.png" alt="Facebook"></li>
         <li><img src="instagram.png" alt="Instagram"></li>
         <li><img src="whatsapp.png" alt="WhatsApp"></li>
-        <li><img src="gmail.png" alt="E-mail"></li>
+        <li><img src="gmail.png" alt="Email"></li>
     </ul>
     <p>&copy; UNIDADE PLENA SÃO LUIS GONÇALVES DIAS 2022. Todos os direitos reservados.</p>
 </footer>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script>
     const btnMobile = document.getElementById('btn-mobile');
     const nav = document.getElementById('nav');
-    btnMobile.addEventListener('click', () => nav.classList.toggle('active'));
+    btnMobile.addEventListener('click', ()=>nav.classList.toggle('active'));
+
+    // Carrossel simples
+    const slide = document.querySelector('.carousel-slide');
+    const slides = document.querySelectorAll('.carousel-slide img');
+    let index = 0;
+
+    const nextBtn = document.querySelector('.next');
+    const prevBtn = document.querySelector('.prev');
+
+    function showSlide(i){
+        if(i<0) index=slides.length-1;
+        else if(i>=slides.length) index=0;
+        else index=i;
+        slide.style.transform = `translateX(-${index*100}%)`;
+    }
+
+    nextBtn.addEventListener('click', ()=>showSlide(index+1));
+    prevBtn.addEventListener('click', ()=>showSlide(index-1));
+
+    setInterval(()=>showSlide(index+1), 5000);
 </script>
 
 </body>
