--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <li><img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp.png" alt="WhatsApp"></li>
         <li><img src="https://img.icons8.com/ios-filled/50/ffffff/new-post.png" alt="Email"></li>
     </ul>
-    <p>&copy; UNIDADE PLENA SÃO LUIS GONÇALVES DIAS 2025. EDWSA.COM.BR Todos os direitos reservados.</p>
+    <p>&copy; UNIDADE PLENA SÃO LUIS GONÇALVES DIAS 2025. EDWSA.COM.BR <BR></BR>Todos os direitos reservados.</p>
 </footer>
 
 <script>
