--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
               <div class="carousel-slide">
                 <picture>
                   <source srcset="01.jpg" media="(min-width:600px)">
-                  <img src="01-mobile.jpg" alt="Evento comunitário" loading="lazy">
+                  <img src="01.jpg" alt="Evento comunitário" loading="lazy">
                 </picture>
               </div>
               <div class="carousel-slide">
                 <picture>
                   <source srcset="02.jpg" media="(min-width:600px)">
-                  <img src="02-mobile.jpg" alt="Sessão de leitura" loading="lazy">
+                  <img src="02.jpg" alt="Sessão de leitura" loading="lazy">
                 </picture>
               </div>
               <div class="carousel-slide">
                 <picture>
                   <source srcset="03.jpg" media="(min-width:600px)">
-                  <img src="03-mobile.jpg" alt="Ações da comunidade" loading="lazy">
+                  <img src="03.jpg" alt="Ações da comunidade" loading="lazy">
                 </picture>
               </div>
             </div>
