--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <a href="#contato" class="btn btn-outline">Fale conosco</a>
           </div>
 
-          <div style="margin-top:18px" class="small muted">Telefone/WhatsApp: <strong>+55 (00) 0 0000-0000</strong> • Email: <strong>contato@edwsa.com.br</strong></div>
+          <div style="margin-top:18px" class="small muted">Email: <strong>contato@edwsa.com.br</strong></div>
         </div>
 
         <!-- Carousel column -->
