--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="hero-grid">
         <div class="hero-card">
           <h2>Bem-vindo à Biblioteca GDias</h2>
-          <p>Recursos, suporte e agenda para ajudar sua comunidade a crescer. Acesse ideias, documentação e horários em um só lugar.</p>
+          <p>Á Plataforma do GDIAS para aluguel de livros! Aqui alunos, professores e funcionários encontram recursos, suporte e agenda para acessar, reservar e utilizar os livros da comunidade de forma prática e organizada.</p>
 
           <div class="cta-row">
             <a href="#services" class="btn btn-primary">Ver serviços</a>
@@ -217,25 +217,25 @@
         <article class="service" tabindex="0" role="article" aria-label="Suporte">
           <img src="https://img.icons8.com/ios-filled/100/ffcc00/technical-support.png" alt="Ícone suporte">
           <h3>Suporte</h3>
-          <p>Ajuda técnica e logística para eventos, transmissão e infraestrutura.</p>
+          <p>Ajuda para alugar e acessar os livros.</p>
         </article>
 
         <article class="service" tabindex="0" role="article" aria-label="Ideias">
           <img src="https://img.icons8.com/ios-filled/100/ffcc00/idea.png" alt="Ícone ideias">
           <h3>Ideias</h3>
-          <p>Banco de iniciativas, sugestões de projetos e templates prontos.</p>
+          <p>Banco de iniciativas, queremmos suas sugestões de melhoria da plataforma.</p>
         </article>
 
         <article class="service" tabindex="0" role="article" aria-label="Calendário">
           <img src="https://img.icons8.com/ios-filled/100/ffcc00/calendar.png" alt="Ícone calendário">
           <h3>Calendário</h3>
-          <p>Agenda de eventos, reuniões e compromissos da comunidade.</p>
+          <p>Agenda de eventos da IP GONÇALVES DIAS.</p>
         </article>
 
         <article class="service" tabindex="0" role="article" aria-label="Horários">
           <img src="https://img.icons8.com/ios-filled/100/ffcc00/clock.png" alt="Ícone horários">
           <h3>Horários</h3>
-          <p>Quadro de horários das atividades semanais e salas disponíveis.</p>
+          <p>Quadro de horários das atividades na biblioteca.</p>
         </article>
 
         <article class="service" tabindex="0" role="article" aria-label="Documentação">
@@ -250,21 +250,21 @@
     <section id="projetos" style="margin-top:28px">
       <div class="hero-card">
         <h3 style="font-family:'Montserrat',sans-serif">Projetos em destaque</h3>
-        <p class="muted small">Aqui você pode listar projetos com links para páginas internas ou PDFs. Se quiser, eu gero uma lista automática com cards.</p>
+        <p class="muted small">Aqui você pode listar projetos com links para páginas de projetos.</p>
       </div>
     </section>
 
     <section id="sobre" style="margin-top:18px">
       <div class="hero-card">
         <h3 style="font-family:'Montserrat',sans-serif">Sobre</h3>
-        <p class="muted small">Unidade Plena — São Luís Gonçalves Dias. Trabalho voluntário, eventos e apoio às equipes locais.</p>
+        <p class="muted small">Biblioteca da Unidade Plena — São Luís Gonçalves Dias.</p>
       </div>
     </section>
 
     <section id="contato" style="margin-top:18px;margin-bottom:18px">
       <div class="hero-card">
         <h3 style="font-family:'Montserrat',sans-serif">Contato</h3>
-        <p class="muted small">Email: contato@edwsa.com.br • Telefone/WhatsApp: +55 (00) 0 0000-0000</p>
+        <p class="muted small">Email: contato@edwsa.com.br </p>
       </div>
     </section>
 
@@ -280,7 +280,7 @@
         <a href="mailto:contato@edwsa.com.br" aria-label="Email" title="Email"><img src="https://img.icons8.com/ios-filled/50/ffffff/new-post.png" alt="Email" width="26"></a>
       </div>
 
-      <p class="small muted">&copy; UNIDADE PLENA SÃO LUIS GONÇALVES DIAS 2025. EDWSA.COM.BR — Todos os direitos reservados.</p>
+      <p class="small muted">&copy; UNIDADE PLENA SÃO LUIS GONÇALVES DIAS 2025. <br>edwsa.com.br — Todos os direitos reservados.</p>
     </div>
   </footer>
 
