--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
     <!-- Services -->
     <section id="services">
-      <h2 style="font-family:'Montserrat',sans-serif;margin-bottom:16px">Serviços</h2>
+      <h2 style="font-family:'Montserrat',sans-serif;margin-bottom:16px">+ Informações</h2>
       <p class="small muted">Clique em um serviço para saber mais — todos projetados para apoiar projetos e agentes da unidade.</p>
 
       <div class="services-grid" style="margin-top:18px">
