--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <nav aria-label="Menu principal">
         <button class="mobile-btn" id="mobileToggle" aria-expanded="false" aria-controls="mobileMenu">☰</button>
         <ul id="menuList">
-          <li><a href="#entrar" class="cta">Entrar</a></li>
+          <li><a href="login.html" class="cta">Entrar</a></li>
           <li><a href="#projetos">Projetos</a></li>
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#contato">Contato</a></li>
